src/objects/CventEvents__DataTransferFilter__c.object
<CustomObject>
    <description>Represents a filter within a data transfer configuration.</description>
    <fields>
        <fullName>CventEvents__AnswerTo__c</fullName>
        <description>Stores either question or question tag stub.</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores either question or question tag stub.</inlineHelpText>
        <label>Answer To</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__CventField__c</fullName>
        <description>Stores API name of the field used in filter.</description>
        <inlineHelpText>Stores API name of the field used in filter.</inlineHelpText>
        <label>Cvent Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__CventObject__c</fullName>
        <description>Indicates Cvent object used in filter.</description>
        <inlineHelpText>Indicates Cvent object used in filter.</inlineHelpText>
        <label>Cvent Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cvent Contact</fullName>
                </value>
                <value>
                    <fullName>Survey Respondent</fullName>
                </value>
                <value>
                    <fullName>Survey Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__DataTransferConfiguration__c</fullName>
        <label>Data Transfer Configuration</label>
        <referenceTo>CventEvents__DataTransferConfiguration__c</referenceTo>
        <relationshipLabel>Data Transfer Filters</relationshipLabel>
        <relationshipName>DataTransferFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CventEvents__Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equal than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equal than</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
                <value>
                    <fullName>includes any</fullName>
                </value>
                <value>
                    <fullName>includes all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__Value__c</fullName>
        <label>Value</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Data Transfer Filter</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__DataTransferConfiguration__c</columns>
        <columns>CventEvents__CventObject__c</columns>
        <columns>CventEvents__CventField__c</columns>
        <columns>CventEvents__AnswerTo__c</columns>
        <columns>CventEvents__Operator__c</columns>
        <columns>CventEvents__Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DTF-{00000000}</displayFormat>
        <label>Data Transfer Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Transfer Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>